--- a/src/main/webapp/app/pages/pagesong/pages.component.html
+++ b/src/main/webapp/app/pages/pagesong/pages.component.html
@@ -1,19 +1,8 @@
-<div>
-    <h2><span data-translate="rockbible3App.pagesong.pages.title">pages</span></h2>
+<div class="fondo">
+    <br>
+    <h2 style="text-align: center"><span data-translate="rockbible3App.pagesong.pages.title">Mis Canciones</span></h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
 
-    <!--<div class="table-responsive" *ngIf="pages">
-        <table class="table table-striped">
-            <thead>
-                <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let pages of pages ;trackBy: trackId">
-                </tr>
-            </tbody>
-        </table>
-    </div>-->
 
 </div>
