--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                 </div>
-                <p class="tituloSong" style="text-align: center; color: white">{{search.name}}</p>
+                <p class="tituloSong" style="text-align: center; color: white">{{data.name}}</p>
             </div>
         </div>
         <br>
