--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -2,8 +2,8 @@
 <div>
     <router-outlet name="navbar"></router-outlet>
 </div>
-<div class="container-fluid">
-    <div class="fondo">
+<div>
+    <div>
         <router-outlet></router-outlet>
         <router-outlet name="popup"></router-outlet>
     <jhi-footer></jhi-footer>
