--- a/src/main/webapp/app/pages/pageartist/pages.component.html
+++ b/src/main/webapp/app/pages/pageartist/pages.component.html
@@ -5,20 +5,31 @@
     <jhi-alert-error></jhi-alert-error>
     <div class="jumbotron fondo">
         <div class="row">
-            <div *ngFor="let search of DataSearch" class="infoDiv col-lg-3 col-md-4 col-sm-6">
-
-                <!--<div class="cover" [style.background-image]="sanitizeImage(search.albumId)">
+            <div *ngFor="let favourites of Favoritos" class="infoDiv col-lg-2 col-md-4 col-sm-6">
+              <div class="cover" [style.background-image]="sanitizeImage(favourites[0].albumId)">
                     <div class="overlayInfo">
                         <div>
-                            <img id="{{search.id}}" (click)="like(search.id)" alt="vacio" src="../../../content/images/heart-1.png">
-                            <button class="btn btn-primary botonyoutube" (click)="searchYoutube(search.name, search.artistName)">Youtube</button>
+                            <img id="{{favourites[0].id}}" (click)="like(favourites[0].id)" alt="completo" src="../../../content/images/heart-2.png">
+                            <button class="btn btn-primary botonyoutube" (click)="openModal(favourites[0].name, favourites[0].artistName)">Youtube</button>
                             <audio controls class="audio">
-                                <source src="{{search.previewURL}}" type="audio/mpeg">
+                                <source src="{{favourites[0].previewURL}}" type="audio/mpeg">
                             </audio>
                         </div>
                     </div>
                 </div>
-                <p class="tituloSong" style="text-align: center; color: white">{{search.name}}</p>-->
+                <p class="tituloSong" style="text-align: center; color: white">{{favourites[0].name}}</p>
+            </div>
+            <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display}">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <iframe id="myFrame" width="740" height="420" [src]="video" frameborder="0"></iframe>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" (click)="onCloseHandled()">Close</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
