Cambio en el diseño del modal de youtube

--- a/src/main/webapp/app/pages/pageartist/pages.component.html
+++ b/src/main/webapp/app/pages/pageartist/pages.component.html
@@ -20,13 +20,14 @@
                 <p class="tituloSong" style="text-align: center; color: white">{{favourites[0].name}}</p>
             </div>
             <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display}">
+                <div class="backdrop"></div>
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <iframe id="myFrame" width="740" height="420" [src]="video" frameborder="0"></iframe>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" (click)="onCloseHandled()">Close</button>
+                            <button type="button" class="close" (click)="onCloseHandled()">X</button>
+                           <div class="embed-responsive embed-responsive-16by9">
+                               <iframe id="embed-responsive-item" [src]="video" frameborder="0" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
