phome,settings,register,footer

--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,12 @@
-<div class="footer">
-    <p jhiTranslate="footer">Building By:</p>
+<div class="footer" style="display: block; background-color: rgb(102,102,102); color: white; font-size: 13px;">
+    <div style="margin-top: 20px; text-align: center;">
+        <div style="display: inline-block; text-align: right; vertical-align: top; margin-right: 25px;">
+
+            <p style="display: flex; justify-content: center; align-content: center; flex-direction: column;">
+            <p>Copyright <i class="fa fa-copyright"></i> Reserved by <a style="font-weight:bold;">puigtheSong</a></p>
+            </p>
+
+        </div>
+
+    </div>
 </div>
