--- a/src/main/webapp/app/pages/pagehome/phome.css
+++ b/src/main/webapp/app/pages/pagehome/phome.css
@@ -1,9 +1,37 @@
+/*
+    DEMO STYLE
+*/
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
 .fondo{
     background-size: cover;
-    /*background-image: url("../../../content/images/fondoTopTracks.jpg");*/
-    background: linear-gradient(to bottom right, white, #409cff);
+    background: linear-gradient(#020d1c,#020d1c);
 }
 
+h1{
+    color:white!important;
+}
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: grey;
+    font-style: italic;
+}
+::-moz-placeholder { /* Firefox 19+ */
+    color: grey;
+    font-style: italic;
+}
+:-ms-input-placeholder { /* IE 10+ */
+    color: grey;
+    font-style: italic;
+}
+:-moz-placeholder { /* Firefox 18- */
+    color: grey;
+    font-style: italic;
+}
+.buscador{
+    width:94%;
+}
 
 .cover {
     background-size: cover;
@@ -11,13 +39,17 @@
     height: 200px;
     display: block;
     margin: 10px;
-    border: 2px solid #151515;
+    border: 2px solid white;
     position: relative;
 }
 .audio{
     align-content: center;
     margin-top: 8%;
     width: 100%;
+}
+
+.audio:hover{
+    cursor: pointer;
 }
 
 .tituloSong{
@@ -36,7 +68,7 @@
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: gray;
+    background-color: #f5f5f5;
 }
 .cover img{
     cursor: pointer;
@@ -52,11 +84,32 @@
     opacity: 0.9;
 }
 
-.youtube .botonyoutube{
-    margin-left: 37%;
-    width: 45px;
-    height: 45px;
-    margin-top: 1%;
+.botonyoutube{
+    margin-top: 15%;
+    margin-left: 32%;
+    background-color: red;
+    border-color: white;
+    border-radius: 4px;
+}
+.botonyoutube:hover{
+    background-color: white;
+    border-color: red;
+    cursor: pointer;
+    color:red;
+    border-radius: 4px;
+}
+
+button:hover{
+    -webkit-box-shadow: 0px 0px 51px 4px rgba(255,255,255,1);
+    -moz-box-shadow: 0px 0px 51px 4px rgba(255,255,255,1);
+    box-shadow: 0px 0px 51px 4px rgba(255,255,255,1);
+    cursor:pointer;
+}
+
+.boton2{
+    color:white!important;
+    background-color: green!important;
+    margin-left: 40%!important;
 }
 
 .image-top {
@@ -68,40 +121,9 @@
     flex-wrap: wrap;*/
 }
 
-.modal-dialog {
-    max-width: 1000px;
-    margin: 100px auto 30px;
+.form-control{
+    border: 2px solid!important;
 }
-
-
-
-.modal-body {
-    position:relative;
-    padding:0px;
-}
-.close {
-    position:absolute;
-    right:-30px;
-    top:0;
-    z-index:999;
-    font-size:2rem;
-    font-weight: normal;
-    color: red;
-    opacity:1;
-    cursor: pointer;
-}
-
-.backdrop {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background: black;
-    opacity: 0.8;
-}
-
-
 
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
@@ -111,5 +133,267 @@ only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) {
     .hipster {
+    }
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background: #fafafa;
+}
+
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
+
+}
+
+a, a:hover, a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+i, span {
+    display: inline-block;
+}
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+.wrapper {
+    display: flex;
+    align-items: stretch;
+}
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    background: #7386D5;
+    color: #fff;
+    transition: all 0.3s;
+}
+
+#sidebar.active {
+    min-width: 80px;
+    max-width: 80px;
+    text-align: center;
+}
+
+#sidebar.active .sidebar-header h3, #sidebar.active .CTAs {
+    display: none;
+}
+
+#sidebar.active .sidebar-header strong {
+    display: block;
+}
+
+#sidebar ul li a {
+    text-align: left;
+}
+
+#sidebar.active ul li a {
+    padding: 20px 10px;
+    text-align: center;
+    font-size: 0.85em;
+}
+
+#sidebar.active ul li a i {
+    margin-right:  0;
+    display: block;
+    font-size: 1.8em;
+    margin-bottom: 5px;
+}
+
+#sidebar.active ul ul a {
+    padding: 10px !important;
+}
+
+#sidebar.active a[aria-expanded="false"]::before, #sidebar.active a[aria-expanded="true"]::before {
+    top: auto;
+    bottom: 5px;
+    right: 50%;
+    -webkit-transform: translateX(50%);
+    -ms-transform: translateX(50%);
+    transform: translateX(50%);
+}
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background: #6d7fcc;
+}
+
+#sidebar .sidebar-header strong {
+    display: none;
+    font-size: 1.8em;
+}
+
+#sidebar ul.components {
+    padding: 20px 0;
+    border-bottom: 1px solid #47748b;
+    background-color: #f5f5f5!important;
+    height:100%;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+#sidebar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+#sidebar ul li a i {
+    margin-right: 10px;
+}
+
+#sidebar ul li.active > a, a[aria-expanded="true"] {
+    color: #fff;
+    background: rgb(211, 211, 211);
+}
+
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
+    content: '\e259';
+    display: block;
+    position: absolute;
+    right: 20px;
+    font-family: 'Glyphicons Halflings';
+    font-size: 0.6em;
+}
+a[aria-expanded="true"]::before {
+    content: '\e260';
+}
+
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: rgb(211, 211, 211);
+}
+.glyphicon{
+    top: 3px!important;
+}
+
+.col-10{
+    max-width: 100%!important;
+}
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+a.download {
+    background: #fff;
+    color: #7386D5;
+}
+
+a.article, a.article:hover {
+    background: rgb(211, 211, 211);
+    color: #fff;
+}
+
+
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+#content {
+    min-height: 100vh;
+    transition: all 0.3s;
+    width:100%;
+}
+
+
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+@media (max-width: 768px) {
+    #sidebar {
+        min-width: 80px;
+        max-width: 80px;
+        text-align: center;
+        margin-left: -80px;
+    }
+    a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
+        top: auto;
+        bottom: 5px;
+        right: 50%;
+        -webkit-transform: translateX(50%);
+        -ms-transform: translateX(50%);
+        transform: translateX(50%);
+    }
+    #sidebar.active {
+        margin-left: 0 !important;
+    }
+
+    #sidebar .sidebar-header h3, #sidebar .CTAs {
+        display: none;
+    }
+
+    #sidebar .sidebar-header strong {
+        display: block;
+    }
+
+    #sidebar ul li a {
+        padding: 20px 10px;
+    }
+
+    #sidebar ul li a span {
+        font-size: 0.85em;
+    }
+    #sidebar ul li a i {
+        margin-right:  0;
+        display: block;
+    }
+
+    #sidebar ul ul a {
+        padding: 10px !important;
+    }
+
+    #sidebar ul li a i {
+        font-size: 1.3em;
+    }
+    #sidebar {
+        margin-left: 0;
+    }
+    #sidebarCollapse span {
+        display: none;
     }
 }
