Añadido modificaciones del modal(otra vez) de youtube y buscar al darle enter

--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -72,8 +72,8 @@
         <div id="content">
             <div class="col-10">
                 <div class="col-sm-12">
-                    <input type="text" [(ngModel)]="search" class="buscador" placeholder="Buscar artista o canción">
-                    <button class="btn btn-primary" (click)="searchSong()"><span class="glyphicon glyphicon-search"></span></button>
+                    <input type="text" (keyup.enter)="searchSong()" [(ngModel)]="search" class="buscador" placeholder="Buscar artista o canción">
+                    <button class="btn btn-primary"  (click)="searchSong()"><span class="glyphicon glyphicon-search"></span></button>
 
                 </div><br>
                 <div class="row">
@@ -123,18 +123,13 @@
                     <div class="backdrop" [ngStyle]="{'display':display}"></div>
                     <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display,'width':560}">
                         <div class="modal-dialog" role="document">
+                            <div class="backdrop"></div>
                             <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" aria-label="Close" (click)="onCloseHandled()"><span
-                                        aria-hidden="true">&times;</span></button>
-                                    <h4 class="modal-title">Model Title</h4>
-                                </div>
                                 <div class="modal-body">
-                                    <iframe id="myFrame" width="470" height="315" [src]="video" frameborder="0"
-                                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" (click)="onCloseHandled()">Close</button>
+                                    <button type="button" class="close" (click)="onCloseHandled()">X</button>
+                                    <div class="embed-responsive embed-responsive-16by9">
+                                        <iframe id="embed-responsive-item" [src]="video" frameborder="0" allowfullscreen></iframe>
+                                    </div>
                                 </div>
                             </div>
                         </div>
