--- a/src/main/webapp/app/pages/pagehome/phome.css
+++ b/src/main/webapp/app/pages/pagehome/phome.css
@@ -329,6 +329,37 @@ a.article, a.article:hover {
     color: #fff;
 }
 
+.modal-dialog {
+    max-width: 1000px;
+    margin: 100px auto 30px;
+}
+
+.modal-body {
+    position:relative;
+    padding:0px;
+}
+
+.close {
+    position:absolute;
+    right:-30px;
+    top:0;
+    z-index:999;
+    font-size:2rem;
+    font-weight: normal;
+    color: red;
+    opacity:1;
+    cursor: pointer;
+}
+
+.backdrop {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: black;
+    opacity: 0.8;
+}
 
 
 /* ---------------------------------------------------
